# Cross-Exchange-Latency-Arbitrage-Engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cpp/: circular_buffer.hpp  cli_monitor.cpp  control_plane.cpp  control_plane.hpp  pcie_dma.cpp  pcie_dma.hpp  sim_main.cpp  software_risk_gate.hpp  solarflare_mock.cpp  solarflare_mock.hpp  telemetry.cpp  telemetry.hpp
docs/: architecture.md  cabling_guide.md  deployment_runbook.md
fpga/: itch_parser.v  nbbo_comparator.v  ouch_constructor.v  risk_gate.v  tb_itch_parser.v  threshold_logic.v  top_latency_arb.v
python/: backtester.py  data_generator.py  pcap_to_itch.py  race_simulator.py  sim_server.py
tests/: test_circular_buffer.cpp  test_race_premium.py
web/: app.js  index.html  terminal.css
